--- a/templates/fragments/_nav.html.twig
+++ b/templates/fragments/_nav.html.twig
@@ -1,6 +1,9 @@
  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Sortir.com</a>
+        <a class="navbar-brand" href="{{path('app_main_index')}}">
+      <img src="{{asset('images/logoSortir.png')}}" alt="Logo" width="60" class="d-inline-block align-text-center rounded">
+      Sortir.com
+    </a>
       <!--  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button> --> 
@@ -10,18 +13,29 @@
         </button>
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav me-auto align-items-center">
+            {% if is_granted ('IS_AUTHENTICATED_FULLY') %}   
+             {% if "ROLE_ADMIN" in app.user.roles %}
                 <li class="nav-item ">
-                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-person"></i> Utilisateurs</a>
+                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-person"></i> Villes</a>
+                </li>
+                <li class="nav-item ">
+                <a class="nav-link {% if "user" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-person"></i> Sites</a>
+                </li>
+              {% endif %}
+             {% endif %}      
+                <li class="nav-item">
+                <a class="nav-link {% if "post" in app.request.get("_route") %} active {% endif %}" href="{{path('app_main_index')}}"><i class="bi bi-megaphone"></i> Accueil</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link {% if "post" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-megaphone"></i> Annonces</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link {% if "tag" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-list-check"></i> Services</a>
+                <a class="nav-link {% if "tag" in app.request.get("_route") %} active {% endif %}" href="#"><i class="bi bi-list-check"></i> Mon Profil</a>
                 </li>
                 </li>
                  <li class="nav-item">
-                <a class="nav-link {% if "tag" in app.request.get("{{path('app_logout')}}") %} active {% endif %}" href="{{path('app_logout')}}">Déconnexion</a>
+                 {% if is_granted ('IS_AUTHENTICATED_FULLY') %}
+                        <a href="{{path('app_logout')}}"><button class="btn btn-secondary mx-2 my-sm-0" type="submit">Déconnexion</button></a>
+                    {% else %}
+                        <a href="{{path('app_login')}}"><button class="btn btn-secondary mx-2 my-sm-0" type="submit">Connexion</button></a>
+                    {% endif %} 
                 </li>
             </ul>
         
