--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -32,7 +32,7 @@
                     <input type="hidden" name="_csrf_token"
                         value="{{ csrf_token('authenticate') }}"
                     >
-                    {# <input type="hidden" name="_target_path" value="{{ path('account') }}"> #}
+                    <input type="hidden" name="_target_path" value="{{ path('app_main_index') }}">
                     <div class="button">
                         <button class="btn btn-lg btn-primary" type="submit">
                         Sign in
