--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Participant - Gérer{% endblock %}
 
 {% block body %}
+ {% include "fragments/_nav.html.twig" %}
     <h1>Gérer les participants</h1>
 
     <table class="table table-hover">
