--- a/templates/profile/new.html.twig
+++ b/templates/profile/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Participant - Créer{% endblock %}
 
 {% block body %}
-
+{% include "fragments/_nav.html.twig" %}
 <div class="row my-4">
     <div class="col-6 offset-3">
         <h1>Créer nouveau participant</h1>
