--- a/templates/trip/_search-form.html.twig
+++ b/templates/trip/_search-form.html.twig
@@ -16,7 +16,7 @@
             </div>
             <div>
                 <label for="searchNameTrip" class="form-label mt-4">Le nom de la sortie contient :</label>
-                <input type="email" class="form-control" id="searchNameTrip" name="searchNameTrip">
+                <input type="text" class="form-control" id="searchNameTrip" name="searchNameTrip">
               
             </div>
             </div>
