--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Modifier mon profil{% endblock %}
 
 {% block body %}
+{% include "fragments/_nav.html.twig" %}
     <div class="row m-3 justify-content-center">
         <h1>Modifier mon profil</h1>
     </div>
