--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -16,7 +16,7 @@
     {% endif %}
 
     {% include "trip/_search-form.html.twig" %}
-    <div class="container-fluid">
+    <div class="container-fluid p-3">
             <div class="row">
                 <div class="col-8 offset-2">
                     <div class="table-wrapper">
