--- a/templates/main/_trips_tbody.html.twig
+++ b/templates/main/_trips_tbody.html.twig
@@ -9,8 +9,11 @@
                 X
             {% endif %}
         </td>
-        <td>{{ trip.organiser }}</td>
-        <td></td>
+        <td><a href="{{path('app_profile_show',{'id': trip.organiser.id} )}}">{{ trip.organiser }}</a></td>
+         <td>
+            {#  <a class="btn btn-success" href="{{ path('app_back_movie_show', {'id': movie.id}) }}"><i class="bi bi-eye"></i></a>
+            <a class="btn btn-warning" href="{{ path('app_back_movie_edit', {'id': movie.id}) }}"><i class="bi bi-pencil"></i></a> #}
+        </td>
     </tr>
 {% else %}
     <tr>
