--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,16 @@
 .homesquare p strong {
     font-weight: bold;  /* Make participant and date stand out */
 }
+
+.button-link {
+    background: none;
+    border: none;
+    color: #007bff;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: inherit;
+}
+
+.button-link:hover {
+    text-decoration: none;
+}
