--- a/public/css/searchForm-style.css
+++ b/public/css/searchForm-style.css
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 80%;
+    border: 1px solid;
+    margin: 0 auto;
     
 }
 
