create-a-trip no-functional

--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -13,7 +13,7 @@
             <th scope="col">Prénom</th>
             <th scope="col">Nom de famille</th>
             <th scope="col">Email</th>
-            <th scope="col">Mot de passe</th>
+{#            <th scope="col">Mot de passe</th>#}
             <th scope="col">Numéro de téléphone</th>
             <th scope="col">Admin</th>
             <th scope="col">Actif</th>
@@ -28,7 +28,7 @@
                 <td>{{ profile.firstname }}</td>
                 <td>{{ profile.lastname }}</td>
                 <td>{{ profile.mail }}</td>
-                <td>{{ profile.password }}</td>
+{#                <td>{{ profile.password }}</td>#}
                 <td>{{ profile.phoneNumber }}</td>
                 <td>{{ profile.isAdmin ? 'Oui' : 'Non' }}</td>
                 <td>{{ profile.isActive ? 'Oui' : 'Non' }}</td>
