--- a/templates/trip/edit.html.twig
+++ b/templates/trip/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Trip{% endblock %}
 
 {% block body %}
+ {% include "fragments/_nav.html.twig" %}
     <h1>Edit Trip</h1>
 
     {{ include('trip/_form.html.twig', {'button_label': 'Update'}) }}
