--- a/templates/trip/index.html.twig
+++ b/templates/trip/index.html.twig
@@ -3,43 +3,50 @@
 {% block title %}Trip index{% endblock %}
 
 {% block body %}
-    <h1>Trip index</h1>
+ {% include "fragments/_nav.html.twig" %}
+<div class="row justify-content-center my-4">
+    <div class="col-8">
+            <h1 class='text-center'>Listes des sorties</h1>
+            <div class="my-4">
+                <a class="btn btn-secondary" href="{{ path('app_trip_new') }}">Ajouter</a>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>DateHourStart</th>
+                        <th>Duration</th>
+                        <th>DateRegistrationLimit</th>
+                        <th>NumMaxRegistration</th>
+                        <th>TripDetails</th>
+                        <th>actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for trip in trips %}
+                    <tr>
+                        <td>{{ trip.id }}</td>
+                        <td>{{ trip.name }}</td>
+                        <td>{{ trip.dateHourStart ? trip.dateHourStart|date('d/m/Y H:i') : '' }}</td>
+                        <td>{{ trip.duration }}</td>
+                        <td>{{ trip.dateRegistrationLimit ? trip.dateRegistrationLimit|date('d/m/Y H:i') : '' }}</td>
+                        <td>{{ trip.numMaxRegistration }}</td>
+                        <td>{{ trip.tripDetails }}</td>
+                        <td>
+                            <a class="btn" href="{{ path('app_trip_show', {'id': trip.id}) }}"><i class="bi bi-eye"></i></a>
+                            <a class="btn" href="{{ path('app_trip_edit', {'id': trip.id}) }}"><i class="bi bi-pencil"></i></a>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="8">no records found</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+    </div>
+</div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>DateHourStart</th>
-                <th>Duration</th>
-                <th>DateRegistrationLimit</th>
-                <th>NumMaxRegistration</th>
-                <th>TripDetails</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for trip in trips %}
-            <tr>
-                <td>{{ trip.id }}</td>
-                <td>{{ trip.name }}</td>
-                <td>{{ trip.dateHourStart ? trip.dateHourStart|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ trip.duration }}</td>
-                <td>{{ trip.dateRegistrationLimit ? trip.dateRegistrationLimit|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ trip.numMaxRegistration }}</td>
-                <td>{{ trip.tripDetails }}</td>
-                <td>
-                    <a href="{{ path('app_trip_show', {'id': trip.id}) }}">show</a>
-                    <a href="{{ path('app_trip_edit', {'id': trip.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_trip_new') }}">Create new</a>
+   
 {% endblock %}
