--- a/templates/trip/new.html.twig
+++ b/templates/trip/new.html.twig
@@ -3,7 +3,8 @@
 {% block title %}Sortie - Créer{% endblock %}
 
 {% block body %}
-    <h1>Créer nouvelle sortie</h1>
+ {% include "fragments/_nav.html.twig" %}
+    <h1 class="text-center">Créer nouvelle sortie</h1>
 
 <div class="row my-4">
     <div class="col-6 offset-3">
@@ -11,5 +12,7 @@
     </div>
 </div>
 
-
+{% block javascripts %}
+            <script src="{{asset('js/tripCreation.js')}}"></script>
+        {% endblock %}
 {% endblock %}
