--- a/templates/main/_trips_tbody.html.twig
+++ b/templates/main/_trips_tbody.html.twig
@@ -1,41 +1,45 @@
 {% for trip in trips %}
     <tr>
         <td>{{ trip.name }}</td>
-        <td>{{ trip.dateHourStart|date('d/m/Y H:i')}}</td>
-        <td>{{ trip.dateRegistrationLimit|date('d/m/Y H:i')}}</td>
+        <td>{{ trip.dateHourStart|date('d/m/Y H:i') }}</td>
+        <td>{{ trip.dateRegistrationLimit|date('d/m/Y H:i') }}</td>
         <td>{{ trip.participants|length }}/{{ trip.numMaxRegistration }}</td>
         <td>{{ trip.state.label }}</td>
-        <td>{% if trip.organiser in trip.participants %}
+        <td>
+            {% if trip.organiser in trip.participants %}
                 X
             {% endif %}
         </td>
-        <td><a href="{{path('app_profile_show',{'id': trip.organiser.id} )}}">{{ trip.organiser }}</a></td>
-         <td>
+        <td>
+            <a href="{{ path('app_profile_show', {'id': trip.organiser.id}) }}">{{ trip.organiser }}</a>
+        </td>
+        <td>
             {% if trip.state.label != 'created' %}
-                <a href="{# {{ path('app_trip_show', {id: trip.id}) }} #}" >Afficher</a>
+                <a href="{# {{ path('app_trip_show', {id: trip.id}) }} #}" class="btn btn-outline-primary btn-sm">Afficher</a>
             {% endif %}
             {% if trip.state.label == 'created' and trip.organiser == app.user %}
-                <a href="{# {{ path('app_trip_edit', {id: trip.id}) }} #}" >Modifier</a>
-                <a href="{{ path('app_trip_publish', {id: trip.id}) }}" >Publier</a>
+                <a href="{# {{ path('app_trip_edit', {id: trip.id}) }} #}" class="btn btn-outline-warning btn-sm m-1">Modifier</a>
+                <a href="{{ path('app_trip_publish', {id: trip.id}) }}" class="btn btn-outline-success btn-sm m-1">Publier</a>
             {% endif %}
-
+            
             {% if not trip.participants.contains(app.user) 
                 and trip.dateRegistrationLimit > "now" | date('Y-m-d')
                 and trip.participants|length < trip.numMaxRegistration
                 and trip.state.label == 'open' %}
-              <form method="post" action="{{ path('app_trip_register', {id: trip.id}) }}" style="display: inline;">
-                <button type="submit" class="button-link">S'inscrire</button>
-              </form>
+                <form method="post" action="{{ path('app_trip_register', {id: trip.id}) }}" style="display: inline;">
+                    <button type="submit" class="btn btn-outline-primary btn-sm m-1">S'inscrire</button>
+                </form>
             {% endif %}
+
             {% if trip.participants.contains(app.user) and (trip.state.label == 'open' or trip.state.label == 'closed') %}
                 <form method="post" action="{{ path('app_trip_unregister', {id: trip.id}) }}" style="display: inline;">
-                    <button type="submit" class="button-link">Se désinscrire</button>
+                    <button type="submit" class="btn btn-outline-danger btn-sm m-1">Se désinscrire</button>
                 </form>
             {% endif %}
         </td>
     </tr>
 {% else %}
     <tr>
-        <td colspan="10">No records found</td>
+        <td colspan="8" class="text-center">No records found</td>
     </tr>
 {% endfor %}
