--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -22,31 +22,31 @@
         
     {% include "trip/_search-form.html.twig" %}
     <div class="container-fluid p-3">
-            <div class="row">
-                <div class="col-8 offset-2">
-                    <div class="table-wrapper">
-                        <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Nom de la sortie</th>
-                                        <th>Date de la sortie</th>
-                                        <th>Clôture</th>
-                                        <th>Inscrits/places</th>
-                                        <th>Etat</th>
-                                        <th>Inscrit</th>
-                                        <th>Organisateur</th>
-                                        <th>Action</th> 
-                                    </tr>
-                                </thead>
-                                <tbody class="table-active" id="trips-tbody">
-                                {% include 'main/_trips_tbody.html.twig' %}
-                              
-                                </tbody>
-                        </table>
-                    </div>    
-                </div>
+    <div class="row">
+        <div class="col-8 offset-2">
+            <div class="table-responsive">
+                <table class="table table-hover table-bordered table-striped">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>Nom de la sortie</th>
+                            <th>Date de la sortie</th>
+                            <th>Clôture</th>
+                            <th>Inscrits/Places</th>
+                            <th>État</th>
+                            <th>Inscrit</th>
+                            <th>Organisateur</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody id="trips-tbody">
+                        {% include 'main/_trips_tbody.html.twig' %}
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
+</div>
+
     {% block javascripts %}
             <script src="{{asset('js/filter.js')}}"></script>
         {% endblock %}
