--- a/templates/main/_trips_tbody.html.twig
+++ b/templates/main/_trips_tbody.html.twig
@@ -15,7 +15,7 @@
         </td>
         <td>
             {% if trip.state.label != 'created' %}
-                <a href="{# {{ path('app_trip_show', {id: trip.id}) }} #}" class="btn btn-outline-primary btn-sm">Afficher</a>
+                <a href=" {{ path('app_trip_show', {id: trip.id}) }} " class="btn btn-outline-primary btn-sm">Afficher</a>
             {% endif %}
             {% if trip.state.label == 'created' and trip.organiser == app.user %}
                 <a href="{# {{ path('app_trip_edit', {id: trip.id}) }} #}" class="btn btn-outline-warning btn-sm m-1">Modifier</a>
