--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -46,7 +46,9 @@
         </div>
     </div>
 </div>
-
+<div class="add-trip">
+    <a class="btn btn-secondary" href="{{ path('app_trip_new') }}">Ajouter</a>
+</div>
     {% block javascripts %}
             <script src="{{asset('js/filter.js')}}"></script>
         {% endblock %}
