--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -69,4 +69,8 @@
             </div>
         </div>
     </div>
+    <div class="text-center">
+        <a class="btn btn-primary" href="{{ path('app_main_index') }}">Retour</a>
+    </div>
+    
 {% endblock %}
