--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -14,7 +14,10 @@
         {{ include('profile/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
 </div>
-{#    <a href="{{ path('app_profile_index') }}">back to list</a>#}
+<div class="text-center">
+    <a class="btn btn-primary" href="{{ path('app_profile_show', {'id': participant.id}) }}">Annuler</a>
+</div>
+
 
 {#    {{ include('profile/_delete_form.html.twig') }}#}
 {% endblock %}
