added some buttons

--- a/templates/main/_trips_tbody.html.twig
+++ b/templates/main/_trips_tbody.html.twig
@@ -36,6 +36,9 @@
                     <button type="submit" class="btn btn-outline-danger btn-sm m-1">Se désinscrire</button>
                 </form>
             {% endif %}
+           {% if trip.organiser == app.user and trip.dateHourStart > "now" | date('Y-m-d H:i') %}
+                 <a href="{# {{ path('app_trip_cancel', {id: trip.id}) }} #}" class="btn btn-outline-danger btn-sm m-1">Annuler</a>
+            {% endif %}
         </td>
     </tr>
 {% else %}
