--- a/templates/trip/edit.html.twig
+++ b/templates/trip/edit.html.twig
@@ -1,14 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Trip{% endblock %}
+{% block title %}Sortie - Modifier{% endblock %}
 
 {% block body %}
  {% include "fragments/_nav.html.twig" %}
-    <h1>Edit Trip</h1>
+    <h1>Modifier une sortie</h1>
 
     {{ include('trip/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_trip_index') }}">back to list</a>
+{#    <a href="{{ path('app_trip_index') }}">back to list</a>#}
 
     {{ include('trip/_delete_form.html.twig') }}
+
+    {% block javascripts %}
+        <script src="{{asset('js/tripCreation.js')}}"></script>
+    {% endblock %}
 {% endblock %}
