--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -52,10 +52,11 @@
                                         <p class="text-muted">{{ profile.base.name }}</p>
                                     </div>
                                 </div>
-
-                                <div class="row pt-1">
-                                    <a class="btn btn-primary" href="{{ path('app_profile_edit', {'id': profile.id}) }}">Modifier</a>
-                                </div>
+                                {% if profile == app.user %}
+                                    <div class="row pt-1">
+                                        <a class="btn btn-primary" href="{{ path('app_profile_edit', {'id': profile.id}) }}">Modifier</a>
+                                    </div>
+                                {% endif %}
 {#                                <div class="row pt-1">#}
 {#                                    {{ include('profile/_delete_form.html.twig') }}#}
 {#                                </div>#}
