--- a/templates/profile/show.html.twig
+++ b/templates/profile/show.html.twig
@@ -14,7 +14,7 @@
 {#        {% endif %}#}
 {#    </div>#}
     <div class="row mt-2 text-center">
-        <h1>Mon profil</h1>
+        <h1>{{profile.username}}</h1>
     </div>
 
     <div class="container py-5 h-100">
