--- a/templates/trip/edit.html.twig
+++ b/templates/trip/edit.html.twig
@@ -14,5 +14,6 @@
 
     {% block javascripts %}
         <script src="{{asset('js/tripCreation.js')}}"></script>
+        <script src="{{asset('js/tripSupression.js')}}"></script>
     {% endblock %}
 {% endblock %}
