--- a/templates/profile/edit.html.twig
+++ b/templates/profile/edit.html.twig
@@ -6,8 +6,9 @@
 {% include "fragments/_nav.html.twig" %}
     <div class="row m-3 justify-content-center">
         <h1>Modifier mon profil</h1>
-    </div>
 
+    </div>
+    {% include "fragments/_flash_message.html.twig" %}
 <div class="row my-4">
     <div class="col-6 offset-3">
         <div class="row m-3 col-3"></div>
