tasks set up for changing state

--- a/templates/trip/_form.html.twig
+++ b/templates/trip/_form.html.twig
@@ -44,8 +44,9 @@
             <button type="submit" class="btn btn-primary" name="action" value="publish">Publier</button>    
         </div>
         <div class="col">
-            <a href="{{ path('app_main_index') }}" class="btn btn-secondary">Annuler</a> <!-- Optional reset button -->
+            <a href="{{ path('app_main_index') }}" class="btn btn-secondary">Annuler</a> 
         </div>
     </div>
+    
 </div>
 {{ form_end(formTrip) }}
