--- a/templates/trip/edit.html.twig
+++ b/templates/trip/edit.html.twig
@@ -10,10 +10,11 @@
 
 {#    <a href="{{ path('app_trip_index') }}">back to list</a>#}
 
-    {{ include('trip/_delete_form.html.twig') }}
-
+    
+    <div class="col text-start">
+            {{ include('trip/_delete_form.html.twig') }}
+    </div>
     {% block javascripts %}
         <script src="{{asset('js/tripCreation.js')}}"></script>
-        <script src="{{asset('js/tripSupression.js')}}"></script>
     {% endblock %}
 {% endblock %}
