--- a/templates/trip/_delete_form.html.twig
+++ b/templates/trip/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_trip_delete', {'id': trip.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir supprimer cette sortie?');">
+<form method="post" action="{{ path('app_trip_delete', {'id': trip.id}) }}" onsubmit="return confirm('Etes-vous sur de vouloir supprimer cette sortie?');" class="p-4 m-4">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ trip.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-outline-danger">Supprimer</button>
 </form>
