modify password functional

--- a/templates/trip/_form.html.twig
+++ b/templates/trip/_form.html.twig
@@ -36,14 +36,14 @@
         </div>
     </div>
     {# Submit Button Section #}
-    <div class="row mt-4">
-        <div class="col">
+    <div class="row mt-4 justify-content-center">
+        <div class="col text-center">
             <button type="submit" class="btn btn-primary" name="action" value="save">Enregistrer</button>    
         </div>
-         <div class="col">
+         <div class="col text-center">
             <button type="submit" class="btn btn-primary" name="action" value="publish">Publier</button>    
         </div>
-        <div class="col">
+        <div class="col text-center">
             <a href="{{ path('app_main_index') }}" class="btn btn-secondary">Annuler</a> 
         </div>
     </div>
