--- a/templates/trip/edit.html.twig
+++ b/templates/trip/edit.html.twig
@@ -4,13 +4,15 @@
 
 {% block body %}
  {% include "fragments/_nav.html.twig" %}
-    <h1>Modifier une sortie</h1>
+    <div class="text-center">
+        <h1>Modifier une sortie</h1>
+    </div>
     {{ include('trip/_form.html.twig', {'button_label': 'Update'}) }}
 
 {#    <a href="{{ path('app_trip_index') }}">back to list</a>#}
 
     
-    <div class="col text-start">
+    <div class="text-center">
             {{ include('trip/_delete_form.html.twig') }}
     </div>
     {% block javascripts %}
